@@ -1,3 +1,6 @@
+2003-11-07 TADA Tadashi <sho@spc.gr.jp>
+	* plugin/whatsnew-list.rb: i18n.
+
 2003-10-24 TADA Tadashi <sho@spc.gr.jp>
 	* plugin/title-navi.rb: apply_plugin support.
 
